# error-stack

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
examples/: demo.rs  detect.rs  parse_config.rs
macros/: Cargo.toml
src/: compat.rs  context.rs  error.rs  fmt.rs  future.rs  hook.rs  lib.rs  macros.rs  report.rs  result.rs  serde.rs
src/fmt/: charset.rs  color.rs  config.rs  hook.rs  mod.rs
src/hook/: context.rs  mod.rs
src/serde/: hook.rs  mod.rs
tests/: test_attach.rs  test_attach_printable.rs  test_change_context.rs  test_conversion.rs  test_macros.rs
tests/ui/: into_report.stderr
